<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.Mo"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/mToolbarImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="@drawable/poop" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/user_register"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/mFirstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/mRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_register"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/mPhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_phone"
                android:importantForAutofill="no"
                android:inputType="phone" />

            <EditText
                android:id="@+id/mAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_address"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/mUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_username"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/mPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/hint_pass"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/mButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:background="@color/colorOrange"
        android:text="@string/save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
